styles.css
@font-face {
  font-family: 'Phantom Sans';
  src:
    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff')
      format('woff'),
    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff2')
      format('woff2');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: 'Phantom Sans';
  src:
    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Italic.woff')
      format('woff'),
    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Italic.woff2')
      format('woff2');
  font-weight: normal;
  font-style: italic;
  font-display: swap;
}
@font-face {
  font-family: 'Phantom Sans';
  src:
    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Bold.woff')
      format('woff'),
    url('https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Bold.woff2')
      format('woff2');
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

body {
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
    font-family: 'Phantom Sans', sans-serif;
    font-size: 16px;
}

.youmortalscantcontainme {
    display: flex;
    justify-content: center;
    width: 100vw;
}

.panel {
    margin-top: 20vh;
    margin-left: 7rem;
}

.logo {
    height: auto;
    width: 37rem;
}

.dimg {
    margin-left: 3rem;
    margin-top: 15vh;
    height: 30rem;
    width: 30rem;
}

.tagline {
    font-size: 2rem;
    text-align: left;
    margin-right: 3rem;
}

button {
    font-family: 'Phantom Sans', sans-serif;
    border-radius: 3.40282e38px;
    padding: 1.25rem;
    font-size: 1.25rem;
    transition: background-color linear 0.1s;
    cursor: default;
}

button:hover {
    cursor: pointer;
}

.button {
    border-radius: 3.40282e38px;
    padding: 1.25rem;
    text-decoration: none;
    font-size: 1.25rem;
}

.button:hover {
    cursor: pointer;
}

.filled {
    border: none;
    background-color: black;
    color: white;
    font-weight: 600;
    transition: background-color linear 0.1s;
}

.filled:hover {
    background-color: #282828;
}

.input {
    border-radius: 3.40282e38px;
    padding: 1.25rem;
    text-decoration: none;
    font-size: 1.25rem;
    font-family: 'Phantom Sans', sans-serif;
}

.dashed {
    border: dashed 0.25rem;
    border-color: black;
}

input.dashed:focus {
    outline: none;
    border: solid 0.25rem;
}

.bdashed {
    background-color: white;
    outline: none;
    border: solid 0.25rem;
}

.bdashed:hover {
    border: dashed 0.25rem;
    border-color: black;
}

.sectionhead {
    color: black;
    font-size: 4rem;
}

.centertext {
    width: 40vw;
    min-width: 45rem;
    text-align: left;
    padding: 2rem;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.mt {
    margin-top: 15rem;
}

.ysws {
    font-size: 1.13rem;
}

p {
    font-size: 1.2rem;
    line-height: 1.77778;
}

.smallhead {
    margin-top: 3rem;
    font-size: 1.3rem;
    letter-spacing: 0.7px;
}

.smallheadnm {
    font-size: 1.3rem;
    letter-spacing: 0.7px;
}

#about {
    color: #282828;
}

.faq {
    color: #282828;
}

.boxes {
    display: flex;
}

.famex {
    border-radius: 1rem;
    background-color: white;
    padding: 1rem;
    width: 30%;
    margin-right: 1rem;
}

.faqbox {
    border-radius: 1rem;
    background-color: white;
    padding: 1rem;
    width: 43.305%;
    margin-right: 1rem;
    margin-bottom: 1rem;
}

.faqwidebox {
    border-radius: 1rem;
    background-color: white;
    padding: 1rem;
    width: 95%;
    margin-right: 1rem;
}

.eximg {
    height: auto;
    width: 10vw;
}

a {
    color: black;
}

footer {
    margin-top: 3rem;
    background-color: whitesmoke;
    width: 100vw;
    padding: 0.5rem;
}

header {
    display: flex;
    justify-content: right;
    position: sticky;
    top: 0;
    padding-top: 3rem;
    margin-right: 3rem;
}

header button {
    margin-right: 0.5rem;
}

header button:last-child {
    margin-right: 0;
}

.hc-logo {
    transform: rotate(0deg) translateY(-0.5rem);
    transition: transform 0.3s ease-in-out;
}

.hc-logo:hover {
    transform: rotate(10deg) translateY(0.5rem);
}

.nav {
    font-weight: bold;
    padding: 1rem;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
}

